commit-24-08-2026