@@ -4,8 +4,10 @@ import java.util.List;
 import java.util.Random;
 import java.util.stream.Collectors;
 
+import java.util.Map;
 import org.springframework.stereotype.Service;
 import com.example.mes.producao.equipamento.exceptions.NotFoundEquipamentoException;
+import com.example.mes.producao.equipamento.model.Equipamento;
 import com.example.mes.producao.equipamento.repositories.EquipamentoRepository;
 import com.example.mes.producao.ordemproducao.domain.OrdemProducao;
 import com.example.mes.producao.ordemproducao.dto.OrdemProducaoInputDTO;
@@ -28,11 +30,10 @@ public class GerarOrdemProducaoUseCase {
     @Transactional
     public OrdemProducaoOuputDTO salvarOrdemProducao(OrdemProducaoInputDTO dto) {
 
-        OrdemProducao op = OrdemProducao.criarNormal(dto.equipamentoId(), darNomeOP(), dto.capacidadeMaxima());
+        Equipamento equipamento = equipamentoRepository.findById(dto.equipamentoId())
+                .orElseThrow(() -> new NotFoundEquipamentoException("Equipamento não encontrado"));
 
-        if (!equipamentoRepository.existsById(dto.equipamentoId())) {
-            throw new NotFoundEquipamentoException("Equipamento não encontrado");
-        }
+        OrdemProducao op = OrdemProducao.criarNormal(equipamento, darNomeOP(), dto.capacidadeMaxima());
 
         repository.save(op);
         return OrdemProducaoOuputDTO.fromEntity(op);
@@ -40,43 +41,57 @@ public class GerarOrdemProducaoUseCase {
 
     @Transactional
     public OrdemProducaoOuputDTO salvarRetrabalho(OrdemProducaoInputDTO dto) {
-        OrdemProducao op = OrdemProducao.criarRetrabalho(dto.equipamentoId(), darNomeOP(), dto.capacidadeMaxima());
+        Equipamento equipamento = equipamentoRepository.findById(dto.equipamentoId())
+                .orElseThrow(() -> new NotFoundEquipamentoException("Equipamento não encontrado"));
+
+        OrdemProducao op = OrdemProducao.criarRetrabalho(equipamento, darNomeOP(), dto.capacidadeMaxima());
 
         repository.save(op);
         return OrdemProducaoOuputDTO.fromEntity(op);
     }
 
-    @Transactional
+@Transactional
     public List<OrdemProducaoOuputDTO> salvarRetrabalhoLista(List<OrdemProducaoInputDTO> dto) {
-        List<OrdemProducao> novaOps = dto.stream().map(it -> OrdemProducao
-                .criarRetrabalho(it.equipamentoId(), darNomeOP(), it.capacidadeMaxima()))
-                .toList();
-
+        
+        
         List<Long> idsEquipamentos = dto.stream()
                 .map(OrdemProducaoInputDTO::equipamentoId)
                 .distinct()
                 .toList();
 
-        List<Long> idsExistentes = equipamentoRepository.findAllByIdIn(idsEquipamentos);
-        boolean contemInexistentes = idsExistentes.size() != idsEquipamentos.size();
+       
+        Map<Long, Equipamento> equipamentosMap = equipamentoRepository.findAllById(idsEquipamentos)
+                .stream()
+                .collect(Collectors.toMap(Equipamento::getId, eq -> eq));
 
-        if (contemInexistentes) {
+       
+        if (equipamentosMap.size() != idsEquipamentos.size()) {
             throw new NotFoundEquipamentoException("Um ou mais equipamentos informados não foram encontrados.");
         }
 
+        List<OrdemProducao> novaOps = dto.stream().map(it -> {
+            Equipamento equipamento = equipamentosMap.get(it.equipamentoId());
+           return OrdemProducao.criarRetrabalho(equipamento, darNomeOP(), it.capacidadeMaxima());
+        }).toList();
+
+
         repository.saveAll(novaOps);
 
-        return novaOps.stream().map(OrdemProducaoOuputDTO::fromEntity).collect(Collectors.toList());
+        return novaOps.stream()
+                .map(OrdemProducaoOuputDTO::fromEntity)
+                .toList(); 
     }
 
+    
     @Transactional
     public List<OrdemProducaoOuputDTO> salvarListaOPs(List<OrdemProducaoInputDTO> dto) {
 
         List<OrdemProducao> novasOps = dto.stream()
-                .map(it -> OrdemProducao.criarNormal(
-                        it.equipamentoId(),
-                        darNomeOP(),
-                        it.capacidadeMaxima()))
+                .map(it -> {
+                    Equipamento equipamento = equipamentoRepository.findById(it.equipamentoId())
+                            .orElseThrow(() -> new NotFoundEquipamentoException("Equipamento não encontrado"));
+                    return OrdemProducao.criarNormal(equipamento, darNomeOP(), it.capacidadeMaxima());
+                })
                 .toList();
 
         List<Long> idsEquipamentos = dto.stream()
